--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block styles %} {{ super() }}
 
 <!-- Custom styles -->
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+<!--<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />-->
 {% endblock %}
 
 {% block content %}
@@ -30,7 +30,7 @@
 
 {% block scripts %}
 <!-- Imports -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
 
 <!-- Scripts -->
 <script
@@ -40,3 +40,4 @@
 
 {{ super() }}
 {% endblock %}
+
