--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 <p style="text-align: center;"></p>
 
 <div id="container" align=center>
-  <img  src="{{ url_for('video_feed') }}" />
+  <img id="videoElement"  src="{{ url_for('video_feed') }}" />
 
   <div>
     <br>
