--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 <p style="text-align: center;"></p>
 
 <div id="container" align=center>
-  <img id="videoElement"  src="{{ url_for('video_feed') }}" />
+  <script src="{{ url_for('static', filename='js/index.js') }}"></script>
 
   <div>
     <br>
