--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
 
 <div id="container" align=center>
 <center>
-  <img id="videoElement" src="{{ url_for('video_feed') }}" alt="" width="480px" height="360px">
+  <img id="videoElement" autoplay src="{{ url_for('video_feed') }}" alt="" width="480px" height="360px">
 </center>
   </div>
   
