--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,7 @@
 <div id="container" align=center>
 <center>
   <img id="videoElement" autoplay src="{{ url_for('video_feed') }}" alt="" width="480px" height="360px">
+	<script> document.getElementById('video_feed').play();  </script>
 </center>
   </div>
   
