--- a/templates/index.html
+++ b/templates/index.html
@@ -46,8 +46,15 @@
 
 <div id="container" align=center>
 <center>
-  <img id="videoElement" autoplay src="{{ url_for('video_feed') }}" alt="" width="480px" height="360px">
-	<script> document.getElementById('video_feed').play();  </script>
+ <!-- <img id="videoElement" autoplay src="{{ url_for('video_feed') }}" alt="" width="480px" height="360px">-->
+	 <p>
+    <button onclick="startWebcam();">Start WebCam</button>
+    <button onclick="stopWebcam();">Stop WebCam</button> 
+       <button onclick="snapshot();">Take Snapshot</button> 
+    </p>
+    <video onclick="snapshot(this);" width=400 height=400 id="video" controls autoplay></video>
+  <p>
+	
 </center>
   </div>
   
