--- a/templates/index.html
+++ b/templates/index.html
@@ -50,11 +50,83 @@
 	 <p>
     <button onclick="startWebcam();">Start WebCam</button>
     <button onclick="stopWebcam();">Stop WebCam</button> 
-       <button onclick="snapshot();">Take Snapshot</button> 
     </p>
     <video onclick="snapshot(this);" width=400 height=400 id="video" controls autoplay></video>
   <p>
-	
+	 <script >
+  
+
+      //--------------------
+      // GET USER MEDIA CODE
+      //--------------------
+          navigator.mediaDevices.getUserMedia = ( navigator.getUserMedia ||
+                             navigator.webkitGetUserMedia ||
+                             navigator.mozGetUserMedia ||
+                             navigator.msGetUserMedia);
+
+      var video;
+      var webcamStream;
+
+      function startWebcam() {
+        if (navigator.getUserMedia) {
+           navigator.getUserMedia (
+
+              // constraints
+              {
+                 video: true,
+                 audio: false
+              },
+
+              // successCallback
+              function(localMediaStream) {
+                  video = document.querySelector('video');
+                 video.srcObject = localMediaStream;
+                 webcamStream = localMediaStream;
+              },
+
+              // errorCallback
+              function(err) {
+                 console.log("The following error occured: " + err);
+              }
+           );
+        } else {
+           console.log("getUserMedia not supported");
+        }  
+      }
+
+      function stopWebcam() {
+         // webcamStream.stop();
+        webcamStream.getTracks().forEach(function(track) {
+  track.stop();});
+      }
+      //---------------------
+      // TAKE A SNAPSHOT CODE
+      //---------------------
+      var canvas, ctx;
+        function snapshot() {
+         // Draws current image from the video element into the canvas
+        ctx.drawImage(video, 0,0, canvas.width, canvas.height);
+        //canvas = document.getElementById("myCanvas");
+        //var dataURL = canvas.toDataURL('image/jpg', 1.0);
+        //document.querySelector('#dl-btn').href = dataURL;
+
+        //console.log(dataURL)
+
+      }
+      function init() {
+        // Get the canvas and obtain a context for
+        // drawing in it
+        canvas = document.getElementById("myCanvas");
+        ctx = canvas.getContext('2d');
+        var dataURL = canvas.toDataURL('image/jpg', 1.0);
+        
+      }
+      
+      
+
+    
+
+  </script>
 </center>
   </div>
   
