--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
 <div id="container" align=center>
 <center>
  <!-- <img id="videoElement" autoplay src="{{ url_for('video_feed') }}" alt="" width="480px" height="360px">-->
-    <video onclick="snapshot(this);" width=480 height=360 id="video" controls autoplay></video>
+    <video onclick="snapshot(this);" width="480px" height="360px" id="video" controls autoplay></video>
 		 <p>
     <button onclick="startWebcam();">Start WebCam</button>
     <button onclick="stopWebcam();">Stop WebCam</button> 
