--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,7 @@
 <center>
  <!-- <img id="videoElement" autoplay src="{{ url_for('video_feed') }}" alt="" width="480px" height="360px">-->
     <video onclick="snapshot(this);" width="480px" height="360px" id="video" controls autoplay></video>
+</center>	
 		 <p>
     <button onclick="startWebcam();">Start WebCam</button>
     <button onclick="stopWebcam();">Stop WebCam</button> 
