--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
    <nav class="navbar navbar-dark bg-dark ">
    
    
-      <h1<font color="red" class="entry-title" style="text-align: center;" >Распознавание объектов с Deep learning</h1>
+      <h1<font color="red" class="entry-title" style="text-align: center;" >Распознавание эмоций с Deep learning</h1>
 	 
    </nav>
     </center>
