--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
     </center>
 <h1 class="entry-title" style="text-align: center;"><img style="font-size: 14px; font-family: -webkit-standard;" src="/static/detect.png" alt="" width="512" height="128" /></h1>
 
-
+<center>
    <div class="container">
       <div class="starter-template">
 
