--- a/templates/index.html
+++ b/templates/index.html
@@ -46,13 +46,13 @@
 
 <div id="container" align=center>
 
- <img id="video" autoplay src="{{ url_for('video_feed') }}" alt="" width="480px" height="360px">
-     <!-- <video onclick="snapshot(this);" width="480px" height="360px" id="video" controls autoplay></video>
+ <!--<img id="video" autoplay src="{{ url_for('video_feed') }}" alt="" width="480px" height="360px">-->
+      <video onclick="snapshot(this);" width="480px" height="360px" id="video" controls autoplay></video>
 	
 		 <p>
     <button onclick="startWebcam();">Start WebCam</button>
     <button onclick="stopWebcam();">Stop WebCam</button> 
-    </p>-->
+    </p>
 </center>	
   <p>
 	 <script >
