--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,43 @@
 
 
 /* * HTML elements */
+
+.content{background-color: #FBFBFB; position: relative;margin: 0;padding: 0;border: 0;float: left;overflow: hidden; max-width: 768px; width: 100%;}
+.sidebar1{background-color: #FBFBFB; position: relative;margin-right: 0;padding: 0;border: 0;float: left;overflow: hidden; width: 100%; max-width: 268px;}
+blockquote{margin:10px 10px 10px 35px;}
+
+/* Medium Devices, Desktops */
+@media only screen and (max-width : 992px) {
+  .content{max-width: none; width: 100%;}
+  .sidebar1{max-width: none; width: 100%;}
+  blockquote{margin:10px;}
+}
+
+/* Small Devices, Tablets */
+@media only screen and (max-width : 768px) {
+  .content{max-width: none; width: 100%;}
+  .sidebar1{max-width: none; width: 100%;}
+  blockquote{margin:10px;}
+}
+
+/* Extra Small Devices, Phones */
+@media only screen and (max-width : 480px) {
+  .content{max-width: none; width: 100%;}
+  .sidebar1{max-width: none; width: 100%;}
+  blockquote{margin:10px;}
+}
+
+/* Custom, iPhone Retina */
+@media only screen and (max-width : 320px) {
+
+}
+
+
+
+
+
+
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 18px;
