--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
   
 
       //--------------------
-      // GET USER MEDIA CODE
+      // GET USER MEDIA COD
       //--------------------
           navigator.mediaDevices.getUserMedia = ( navigator.getUserMedia ||
                              navigator.webkitGetUserMedia ||
