--- a/templates/index.html
+++ b/templates/index.html
@@ -51,8 +51,8 @@
       <video onclick="snapshot(this);" width="480px" height="360px" id="video" controls autoplay></video>
 	
 		 <p>
-    <button onclick="startWebcam();">Start WebCam</button>
-    <button onclick="stopWebcam();">Stop WebCam</button> 
+    <button onclick="startWebcam();">Начать распознавание</button>
+    <button onclick="stopWebcam();">Закончить распознавание</button> 
     </p>
 </center>	
   <p>
