--- a/templates/index.html
+++ b/templates/index.html
@@ -51,8 +51,8 @@
       <video onclick="snapshot(this);" width="480px" height="360px" id="video" controls autoplay></video>
 	
 		 <p>
-    <button onclick="startWebcam();">Начать распознавание</button>
-    <button onclick="stopWebcam();">Закончить распознавание</button> 
+    <button onclick="startWebcam();"><font color="green" class="entry-title" style="text-align: center;" >Начать распознавание</button>
+    <button onclick="stopWebcam();"><font color="red" class="entry-title" style="text-align: center;" >Закончить распознавание</button> 
     </p>
 </center>	
   <p>
@@ -159,7 +159,7 @@
 <footer>
 	<nav class="navbar navbar-dark bg-dark ">
    <center>
-      <h5 class="entry-title" style="text-align: center;">&#169; Александр Коротких - 2022 Tessaract.co</h5>
+      <h5 font color="white" class="entry-title" style="text-align: center;">&#169; Александр Коротких - 2022 Tessaract.co</h5>
 	  </center>
    </nav>
 </footer>
