--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
 
 <div id="container" align=center>
 
- <!--<img id="video" autoplay src="{{ url_for('video_feed') }}" alt="" width="480px" height="360px">-->
+
       <video onclick="snapshot(this);" width="480px" height="360px" id="video" controls autoplay></video>
 	
 		 <p>
@@ -56,6 +56,7 @@
     </p>
 </center>	
   <p>
+	   <img id="video" autoplay src="{{ url_for('video_feed') }}" alt="" width="480px" height="360px">
 	 <script >
   
 
