--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
     </center>
 <h1 class="entry-title" style="text-align: center;"><img style="font-size: 14px; font-family: -webkit-standard;" src="/static/detect.png" alt="" width="512" height="128" /></h1>
 
-<center>
+
    <div class="container">
       <div class="starter-template">
 
@@ -54,7 +54,7 @@
     <button onclick="startWebcam();"><font color="green" class="entry-title" style="text-align: center;" >Начать распознавание</button>
     <button onclick="stopWebcam();"><font color="red" class="entry-title" style="text-align: center;" >Закончить распознавание</button> 
     </p>
-</center>	
+	
   <p>
   <p>
   <p>
@@ -68,7 +68,7 @@
   <p>
   <p>
 	  
-  <img id="video" autoplay src="{{ url_for('video_feed') }}" alt="" width="480px" height="360px">
+  <img id="Video" autoplay src="{{ url_for('video_feed') }}" alt="" width="480px" height="360px">
 	 <script >
   
 
