--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@
   <p>
   <p>
 	  
-  <img id="Video" autoplay src="{{ url_for('video') }}" alt="" width="480px" height="360px">
+  <img id="VideoElement" autoplay src="{{ url_for('video_feed') }}" alt="" width="480px" height="360px">
 	 <script >
   
 
