--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@
   <p>
   <p>
 	  
-  <img id="VideoElement" autoplay src="video_feed" alt="" width="480px" height="360px">
+  <img id="VideoElement" autoplay src="/video_feed" alt="" width="480px" height="360px">
 	 <script >
   
 
