--- a/templates/index.html
+++ b/templates/index.html
@@ -46,14 +46,17 @@
       <div class="starter-template">
 
 <div id="container" align=center>
-
+<center>
 
       <video onclick="snapshot(this);" width="480px" height="360px" id="video" controls autoplay></video>
+	
 	
 		 <p>
     <button onclick="startWebcam();"><font color="green" class="entry-title" style="text-align: center;" >Начать распознавание</button>
     <button onclick="stopWebcam();"><font color="red" class="entry-title" style="text-align: center;" >Закончить распознавание</button> 
+	    
     </p>
+	    </center>
 	
   <p>
   <p>
@@ -67,8 +70,9 @@
   <p>
   <p>
   <p>
-	  
+	 <center> 
   <img id="video" autoplay src="/video_feed" alt="" width="480px" height="360px">
+		 </center>
 	 <script >
   
 
