--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
   <p>
   <p>
 	 <center> 
-  <img id="video" autoplay src="/video_feed" alt="" width="480px" height="360px">
+ <!-- <img id="video" autoplay src="/video_feed" alt="" width="480px" height="360px"> -->
 		 </center>
 	 <script >
   
