--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,7 @@
 	
 		 <p>
     <button onclick="startWebcam();"><font color="green" class="entry-title" style="text-align: center;" >Начать распознавание</button>
+	    <button onclick="snapshot();"<font color="red" class="entry-title" style="text-align: center;" >Стоп кадр</button>
     <button onclick="stopWebcam();"><font color="red" class="entry-title" style="text-align: center;" >Закончить распознавание</button> 
 	    
     </p>
