--- a/templates/index.html
+++ b/templates/index.html
@@ -46,33 +46,22 @@
       <div class="starter-template">
 
 <div id="container" align=center>
-<center>
 
-      <video onclick="snapshot(this);" width="480px" height="360px" id="video" controls autoplay></video>
+
+      <!--<video onclick="snapshot(this);" width="480px" height="360px" id="video" controls autoplay></video>-->
 	
 	
-		 <p>
-    <button onclick="startWebcam();"><font color="green" class="entry-title" style="text-align: center;" >Начать распознавание</button>
-	    <button onclick="snapshot();"<font color="red" class="entry-title" style="text-align: center;" >Стоп кадр</button>
-    <button onclick="stopWebcam();"><font color="red" class="entry-title" style="text-align: center;" >Закончить распознавание</button> 
+		 <!--<p>-->
+   <!-- <button onclick="startWebcam();"><font color="green" class="entry-title" style="text-align: center;" >Начать распознавание</button>-->
+	    <1--<button onclick="snapshot();"<font color="red" class="entry-title" style="text-align: center;" >Стоп кадр</button>-->
+    <!--<button onclick="stopWebcam();"><font color="red" class="entry-title" style="text-align: center;" >Закончить распознавание</button>--> 
 	    
-    </p>
-	    </center>
+    <!--</p>-->
+	    <!--</center>-->
 	
-  <p>
-  <p>
-  <p>
-  <p>
-  <p>
-  <p>
-  <p>
-  <p>
-  <p>
-  <p>
-  <p>
-  <p>
-	 <center> 
- <!-- <img id="video" autoplay src="/video_feed" alt="" width="480px" height="360px"> -->
+
+	
+ <img id="video" autoplay src="/video_feed" alt="" width="480px" height="360px">
 		 </center>
 	 <script >
   
