--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
 	
 		 <!--<p>-->
    <!-- <button onclick="startWebcam();"><font color="green" class="entry-title" style="text-align: center;" >Начать распознавание</button>-->
-	    <1--<button onclick="snapshot();"<font color="red" class="entry-title" style="text-align: center;" >Стоп кадр</button>-->
+	    <!--<button onclick="snapshot();"<font color="red" class="entry-title" style="text-align: center;" >Стоп кадр</button>-->
     <!--<button onclick="stopWebcam();"><font color="red" class="entry-title" style="text-align: center;" >Закончить распознавание</button>--> 
 	    
     <!--</p>-->
@@ -75,9 +75,9 @@
                              navigator.msGetUserMedia);
 
       var video;
-      var webcamStream;
+      var VideoCameraStream;
 
-      function startWebcam() {
+      function startVideoCamera() {
         if (navigator.getUserMedia) {
            navigator.getUserMedia (
 
@@ -91,7 +91,7 @@
               function(localMediaStream) {
                   video = document.querySelector('video');
                  video.srcObject = localMediaStream;
-                 webcamStream = localMediaStream;
+                VideoCameraStream = localMediaStream;
               },
 
               // errorCallback
@@ -106,7 +106,7 @@
 
       function stopWebcam() {
          // webcamStream.stop();
-        webcamStream.getTracks().forEach(function(track) {
+       VideoCameraStream.getTracks().forEach(function(track) {
   track.stop();});
       }
       //---------------------
