--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
 
 	<center>
  <img id="video" autoplay src="/video_feed" alt="" width="480px" height="360px">
-		<button onclick="startVideoCamera();">Включить камеру</button>
+		<button onclick="startVideoCamera();" ondblclick=="stopWebcam();">Камера</button>
 		 </center>
 	 <script >
   
