--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,8 @@
 
 	<center>
  <img id="video" autoplay src="/video_feed" alt="" width="480px" height="360px">
-		<button onclick="startVideoCamera();" ondblclick=="stopWebcam();">Камера</button>
+		<button onclick="startVideoCamera();">Включить распознование</button>
+		<button onclick="stopVideoCamera();">Остановить распознавание</button>
 		 </center>
 	 <script >
   
