--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
 	
 
 	<center>
- <img id="video" autoplay src="/video_feed" alt="" width="480px" height="360px">
+ <img id="video" autoplay srcObject="/video_feed" alt="" width="480px" height="360px">
 		<button onclick="startVideoCamera();">Включить распознование</button>
 		<button onclick="stopVideoCamera();">Остановить распознавание</button>
 		 </center>
