--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
 
               // successCallback
               function(video_feed) {
-                  img = document.querySelector('video');
+                  video = document.querySelector('video');
                  img.srcObject = video_feed;
                 VideoCamera  = video_feed;
               },
