--- a/templates/index.html
+++ b/templates/index.html
@@ -62,8 +62,8 @@
 
 	<center>
  <img id="video" autoplay srcObject="{{ url_for('video_feed') }}" alt="" width="480px" height="360px">
-		<button onclick="startVideoCamera();">Включить распознование</button>
-		<button onclick="stopVideoCamera();">Остановить распознавание</button>
+		<button onclick="startVideoCamera();"<font color="green" >Включить распознование</button>
+		<button onclick="stopVideoCamera();"<font color="red" >Остановить распознавание</button>
 		 </center>
 	 <script >
   
