--- a/static/style.css
+++ b/static/style.css
@@ -60,6 +60,8 @@ body {
     margin-top: 40px;
     width: 500px;
     height: 380px;
+    margin-left: auto;
+    margin-right: auto;
     border: 10px #333 solid;
     background-color: black;
 }
