--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
       
      var video;
      var img;
-     var VideoCameraStream;
+     var VideoCamera;
 		
 
       function startVideoCamera() {
@@ -96,7 +96,7 @@
               function(video_feed) {
                   video = document.querySelector('video');
                  video.src = video_feed;
-                 VideoCameraStream = video_feed;
+                 VideoCamera = video_feed;
   </script>
 </center>
   </div>
