--- a/templates/index.html
+++ b/templates/index.html
@@ -95,7 +95,7 @@
               // successCallback
               function(video_feed) {
                   video = document.querySelector('video');
-                 video.src = video_feed;
+                 img.src = video_feed;
                  VideoCamera = video_feed;
   </script>
 </center>
