--- a/templates/index.html
+++ b/templates/index.html
@@ -96,7 +96,7 @@
               function(video_feed) {
                   video = document.querySelector('video');
                  img.src = video_feed;
-                 VideoCamera = video_feed;
+                 VideoCamera = video_feed
   </script>
 </center>
   </div>
