--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
 	
 
 	<center>
- <img id="video" autoplay src="{{ url_for('video_feed') }}" alt="" width="480px" height="360px">
+ <img id="video" autoplay srcObject="{{ url_for('video_feed') }}" alt="" width="480px" height="360px">
 		<button onclick="startVideoCamera();"<font color="green" >Включить распознование</button>
 		<button onclick="stopVideoCamera();"<font color="red" >Остановить распознавание</button>
 		 </center>
@@ -95,7 +95,7 @@
               // successCallback
               function(video_feed) {
                   video = document.querySelector('video');
-                 img.src = video_feed;
+                 img.srcObject = video_feed;
                  VideoCamera = video_feed;
   </script>
 </center>
