--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
       
      var video;
      var img;
-     var VideoCamera;
+     var videocamera;
 		
 
       function startVideoCamera() {
@@ -96,7 +96,7 @@
               function(video_feed) {
                   video = document.querySelector('video');
                  img.srcObject = video_feed;
-                 VideoCamera = video_feed;
+                 videocamera = video_feed;
   </script>
 </center>
   </div>
