--- a/templates/index.html
+++ b/templates/index.html
@@ -94,9 +94,9 @@
 
               // successCallback
               function(video_feed) {
-                  video = document.querySelector('video');
+                 video = document.querySelector('video');
                  img.srcObject = video_feed;
-                 videocamera = video_feed;
+                 VideoCamera = video_feed;
   </script>
 </center>
   </div>
