--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
 	
 
 	<center>
- <img id="video" autoplay srcObject="{{ url_for('video_feed') }}" alt="" width="480px" height="360px">
+ <img id="video" autoplay srcObject="/video_feed" alt="" width="480px" height="360px">
 		<button onclick="startVideoCamera();"<font color="green" >Включить распознование</button>
 		<button onclick="stopVideoCamera();"<font color="red" >Остановить распознавание</button>
 		 </center>
